// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChangeWorker /> should render correctly 1`] = `
<DocumentFragment>
  <form
    class=""
  >
    <div
      class="form-group row"
    >
      <label
        class="form-label col-form-label col-sm-2"
        for="worker-address"
      >
        Worker
      </label>
      <div
        class="col-sm-10"
      >
        <input
          class="form-control"
          id="worker-address"
          name="workerAddress"
          type="text"
          value=""
        />
        <div
          class="invalid-feedback"
          style="display: none;"
        />
      </div>
    </div>
    <div
      class="d-flex justify-content-center"
    >
      <button
        class="btn btn-primary"
        type="submit"
      >
        Set worker
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`<ChangeWorker /> should validate input from user correctly 1`] = `
<DocumentFragment>
  <form
    class=""
  >
    <div
      class="form-group row"
    >
      <label
        class="form-label col-form-label col-sm-2"
        for="worker-address"
      >
        Worker
      </label>
      <div
        class="col-sm-10"
      >
        <input
          class="form-control"
          id="worker-address"
          name="workerAddress"
          type="text"
          value="0x1111"
        />
        <div
          class="invalid-feedback"
          style="display: inline;"
        >
          Should be a valid Ethereum address
        </div>
      </div>
    </div>
    <div
      class="d-flex justify-content-center"
    >
      <button
        class="btn btn-primary"
        disabled=""
        type="submit"
      >
        Set worker
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`<ChangeWorker /> should validate input from user correctly 2`] = `
<DocumentFragment>
  <form
    class=""
  >
    <div
      class="form-group row"
    >
      <label
        class="form-label col-form-label col-sm-2"
        for="worker-address"
      >
        Worker
      </label>
      <div
        class="col-sm-10"
      >
        <input
          class="form-control"
          id="worker-address"
          name="workerAddress"
          type="text"
          value=""
        />
        <div
          class="invalid-feedback"
          style="display: inline;"
        >
          Field is required.
        </div>
      </div>
    </div>
    <div
      class="d-flex justify-content-center"
    >
      <button
        class="btn btn-primary"
        disabled=""
        type="submit"
      >
        Set worker
      </button>
    </div>
  </form>
</DocumentFragment>
`;
